[package]
name = "claude-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] } 
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
anthropic-ai-sdk = "0.1.2"
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
colored = "3.0.0"

