[package]
name = "simple-claude-cli"
version = "0.0.8"
edition = "2024"
authors = ["Katsuhiro Honda<freewave3@gmail.com>"]
description = "A simple command-line interface for interacting with Claude AI models"
license = "MIT"
repository = "https://github.com/katsuhirohonda/claude-cli"
keywords = ["claude", "ai", "anthropic", "cli", "assistant"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] } 
anthropic-ai-sdk = "0.1.4"
colored = "3.0.0"
futures-util = "0.3.31"

[[bin]]
name = "claude"
path = "src/main.rs"
